syntax = "proto3";

option  java_package = "GRPCService";
import "post.proto";
import "user.proto";

package Report;

service Report{
  rpc RemoveReport(ReportObj) returns(EmptyReportMark);
  rpc GetReports(EmptyReportMark) returns (ListOfReports);
  rpc AddReport(ReportObj) returns (EmptyReportMark);
}

message EmptyReportMark{

}

message ListOfReports{
  repeated ReportObj reportObj = 1;
}

message ReportObj{
  int32 postId = 1;
  string reporterUsername = 2;
  string reason =3;

}
